Changed height to min-height in main to avoid cutting off content with resizing.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .content {
